--- a/css/contact.css
+++ b/css/contact.css
@@ -130,25 +130,27 @@ float: left;
 
 }
 
-.form{
-    margin-left: 116px;
-    position: relative;
-
-
+.label{
+    color: #ffff;
 }
 
-.from-control{
+.from-control
+{
+width: 100%;
+background: #ff6258;
+border: none;
+height: 37px;
+}
 
-    width: 37%;
-padding: 14px;
-margin-bottom: 20px;
-background: transparent;
-border-color: #999999;
-box-shadow: none;
-color: #fff;
-border-radius: 10px;
-border-style: groove;
-margin: 11px 16px;
+.btn{
+
+    background: none;
+border: none;
+color: white;
+margin-top: 55px;
+font-size: 36px;
+font-family: "Brush Script MT";
+transition: 0.5s;
 }
 
 
